added whiter gray

--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -1411,7 +1411,7 @@
 :root {
   --ogency-font: "Poppins", sans-serif;
   --heading-font: "Poppins", sans-serif;
-  --ogency-color: #9b9999;
+  --ogency-color: #e1e0e0;
   --ogency-color-rgb: 93, 93, 93;
   --ogency-base: #13d209;
   --ogency-base-rgb: 245, 144, 13;
