--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -1530,6 +1530,7 @@ h6 {
   display: inline-block;
   vertical-align: middle;
   -webkit-appearance: none;
+  appearance: none;
   border: none;
   outline: none !important;
   background-color: var(--ogency-base);
@@ -2065,10 +2066,9 @@ h6 {
   }
 }
 
-.main-menu,
+/* .main-menu,
 .stricky-header {
-  /* after third level no menu */
-}
+} */
 
 .main-menu .main-menu__list,
 .main-menu .main-menu__list ul,
@@ -3691,7 +3691,7 @@ h6 {
   }
 }
 
-@-ms-keyframes blink {
+/* @-ms-keyframes blink {
   .hero-banner__bottom__title span 0% {
     opacity: 1;
   }
@@ -3701,7 +3701,7 @@ h6 {
   .hero-banner__bottom__title span 100% {
     opacity: 1;
   }
-}
+} */
 
 @-o-keyframes blink {
   0% {
@@ -10444,7 +10444,7 @@ h6 {
 }
 
 .product__item__btn a:nth-child(2) {
-  webkit-transition: transform 550ms cubic-bezier(0.445, 0.05, 0.55, 0.95),
+  -webkit-transition: transform 550ms cubic-bezier(0.445, 0.05, 0.55, 0.95),
     opacity ease 300ms, visibility ease 300ms, background ease 300ms,
     color ease 300ms, border ease 300ms;
   -moz-transition: transform 550ms cubic-bezier(0.445, 0.05, 0.55, 0.95),
