add mobile logo

--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -2042,6 +2042,23 @@ h6 {
   }
 }
 
+.desktop-logo {
+  display: none;
+}
+
+.mobile-logo {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .desktop-logo {
+    display: block;
+  }
+  .mobile-logo {
+    display: none;
+  }
+}
+
 .main-menu__logo {
   display: flex;
   align-items: center;
